--- a/components/b0hvz1mf0-java-quarkus/overlays/development/deployment-patch.yaml
+++ b/components/b0hvz1mf0-java-quarkus/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: b0hvz1mf0-java-quarkus
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-4a2475fce1.s3d5.p3.openshiftapps.com/rhtap/rhtap-qe:46b219d687802dcae4f7c3ec9f4f77b5eda07b52@sha256:38e8d432da163e753f81633c463c19d9a79a13a9bd0129b3aac1bade076d4b69
+          name: container-image
